--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ repositories {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.6'
     compile 'org.tinyjee.jgraphx:jgraphx:1.10.1.3'
+    compile 'commons-cli:commons-cli:1.4'
     testCompile 'junit:junit:4.12'
 }
 
